Updates in numerical section

--- a/main.tex
+++ b/main.tex
@@ -421,7 +421,7 @@ U(x,r,t) = U(x,t), \qquad V(x,r,t) = -\nu r \pdiff U x.
 Рассмотрим стержень круглого поперечного сечения радиуса $R$. Введём цилиндрическую систему координат $(x, r, \varphi)$, где $x$ -- осевая координата, $r$ -- продольная, $\varphi$ -- угловая, как показано на рисунке \ref{fig:rod}. Положим стержень бесконечным вдоль оси $x$. Используя Лагранжев подход, введём вектор перемещения точек тела: $\vect{U} = (U, V, W)$, где $U$ -- осевое (продольное) перемещение, $V$ -- радиальное (поперечное) перемещение, а $W$ -- вращение.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.33\textwidth]{Fig1}
+	\includegraphics[width=0.33\textwidth]{1_RodSchematic}
 	\caption{Стержень с круглым поперечным сечением.}
 	\label{fig:rod}
 \end{figure}
@@ -987,6 +987,9 @@ u_{tt} - \left(c^2 + \kappa\frac{\beta_1}{\rho}\right) u_{xx} - \frac{2}{\rho}\l
 %We note that the acoustoelastic effect (modification of the linear wave speed in a pre-stressed media) has been studied in \cite{HughesKelly, ADO, P} (see also references therein). To the best of our knowledge, both models derrived in our paper and described by the equations (\ref{pre_stretch_eq_dim}) (as well as their reduced versions (\ref{eq_dim}) and (\ref{eq_dim_free_surf})) have not been obtained before.
 
 
+
+
+
 \section{Дисперсионные свойства и солитонные решения}
 
 На рисунке \ref{fig:disp} представлены дисперсионные кривые четырёх упрощённых (с нулевыми напряжениями на поверхности и без предварительного растяжения) линеаризованных уравнения типа Буссинеска, приведённые в предыдущих разделах, а также нижние три ветви точного дисперсионного соотношения Похгаммера-Кри для линейной задачи.
@@ -1005,9 +1008,8 @@ p^2 = \frac{\rho \omega^2}{\lambda + 2\mu} - k^2, \quad q^2 = \frac{\rho \omega^
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.85\linewidth]{Fig2}
-	\caption{Дисперсионные кривые для стержня с $\nu = 0.34$. %сделанного из полистирола, упругие модули которого приведены в таблице~\ref{tab:ps}.
-	}
+	\includegraphics[width=0.85\linewidth]{2_DispBlack}
+	\caption{Дисперсионные кривые для стержня с $\nu = 0.34$.}
 	\label{fig:disp}
 \end{figure} 
 
@@ -1018,11 +1020,11 @@ p^2 = \frac{\rho \omega^2}{\lambda + 2\mu} - k^2, \quad q^2 = \frac{\rho \omega^
 %All models reasonably well describe the lowest branch of the dispersion curves for the long waves. Eq. (\ref{eq_dim_SP})  suffers from a short-wave instability, while other three models do not have this defect. Eq. (\ref{eq_dim_free_surf}) for $i=1,2$, capture the presence of the second branch. We also note that, at least in this example, eq. (\ref{eq_dim_free_surf}) for $i=1$ has better dispersive properties than eq. (\ref{eq_dim_free_surf}) for $i=2$ (as a long-wave model). However, eq. (\ref{eq_dim_free_surf}) for $i=2$ better describes the lowest branch in the short wave region. 
 %One can expect that both derived Boussinesq-type models in (\ref{eq_dim_free_surf}) can be useful, depending on the type of the dominant dispersive radiation in the problem under study. One could also try to artificially ``optimise" the dispersive properties as discussed, for example, in \cite{PAT, ADKM}. However, in this paper we were interested in the ``natural" derivation of Boussinesq-type models.
 
-Все четыре уравнения (\ref{eq_dim_free_surf}, $i=1,2$), \eqref{eq_dim_SP} и \eqref{eq_dim_OS} имеют семейство солитонных решений:
+Все четыре уравнения (\ref{eq_dim_free_surf}, $i=1,2$), \eqref{eq_dim_SP} и \eqref{eq_dim_OS} имеют семейство солитонных решений, вывод которых описан в Приложении 2:
 \begin{equation}\label{soliton}
-u_i(x,t) = A\ {\rm sech}^2\ \left[B_{i} \left(x\pm t \sqrt{c^2+\frac{A \beta_1}{3 \rho}}\right) \right], \quad i = \overline {1,4},
+u_i(x,t) = A\ {\rm sech}^2\ \left[B_{i} \left(x\pm t \sqrt{c^2+\frac{A \beta_1}{3 \rho}}\right) \right], \quad i = \overline {1,4}.
 \end{equation}
-где амплитуда $A$ является свободным параметром. Для заданной амплитуды $A$, соответствующие солитонные решения имеют одинаковую скорость, но разные параметры ширины $B_i$:
+Здесь амплитуда $A$ является свободным параметром, причём при $A<0$ такая волна является солитоном сжатия, а при $A>0$ --- солитоном разрежения. Для заданной амплитуды~$A$, соответствующие солитонные решения имеют одинаковую скорость, но разные параметры длины~$B_i$:
 \begin{align}
 %\label{B1}
 %B_1 &=& \sqrt{\frac{3 A\beta c^2 \rho}{\left[18 c^4  \nu^2 \rho^2 + 6A\beta c^2  \nu^2  \rho - A^2 \beta^2 (\nu+1)\right] R^2}} \, ,\\
@@ -1033,19 +1035,19 @@ B_3 &= \sqrt{\frac{A\beta_1}{\left[6\nu E + 2 A \beta_1 (\nu - 1)\right] \nu R^2
 \label{B4}
 B_4 &= \sqrt{\frac{A\beta_1}{(6E + 2A\beta_1)\nu^2 R^2}},
 \end{align}
-для уравнений \eqref{eq_dim_free_surf}, \eqref{eq_dim_SP} и \eqref{eq_dim_OS} соответственно. Получению солитонных решений посвящено Приложение 2.
+для уравнений \eqref{eq_dim_free_surf}, \eqref{eq_dim_SP} и \eqref{eq_dim_OS} соответственно.
 
-На рисунке \ref{fig:soliton} в левой части изображены четыре солитона, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.07$. Видно, что все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако солитоны такой амплитуды вызывают напряжения близкие к пределу упругости для полистирола. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$, следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
+На рисунке \ref{fig:soliton} в левой части изображены четыре солитона сжатия, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.05$. Все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако солитоны такой амплитуды вызывают напряжения близкие к пределу упругости для полистирола. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$, следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
 %In the left part of the Figure \ref{fig:soliton} we plot the four solitons given by the formulae (\ref{soliton}) - (\ref{B4}) for one and the same value of the amplitude parameter $A = -0.05$ and the same elastic moduli shown in Table \ref{tab:ps} (typical for a polystyrene \cite{HughesKelly}). We can see that the four solitons have a different width, with the regularised soliton (\ref{B4}) being the widest. However, this figure is plotted for the value of $A$ which exceeds the yield point for the polystyrene, and therefore in practice this difference would not be important for that particular material (but could be important for some other materials). Indeed, in experiments with polystyrene discussed in the next section the value of $A$ is very small, $A \sim 10^{-3} - 10^{-4}$. Therefore, to leading order in $A$, all four formulae will give the width parameter approximately equal to 
 \begin{equation}\label{}
 B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 \end{equation}
-а соответствующее солитонное решение изображено в правой части рисунка~\ref{fig:soliton} для $A = -0.001$.
+а соответствующее солитонное решение изображено в правой части рисунка~\ref{fig:soliton} для $A = -0.001$. Отметим, что для полистирола коэффициент $\beta_1$, задаваемый формулой~\eqref{beta_1} отрицателен и, следовательно, параметр $B$ вещественен.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.54\linewidth]{Fig3a}
-	\includegraphics[width=0.42\linewidth]{Fig3b}
-	\caption{Солитоны в стержне радиуса $R = 5$~мм, сделанном из полистирола при $A = -0.07$ (слева) и $A= -0.001$ (справа). Упругие модули полистирола приведены в таблице~\ref{tab:ps}.}
+	\includegraphics[width=0.54\linewidth]{3a_FourSolitonsBlack}
+	\includegraphics[width=0.42\linewidth]{3b_SingleSoliton}
+	\caption{Графики функций $-u_i(x,t)$, задаваемых формулой \eqref{soliton}, в стержне радиуса $R = 5$~мм, сделанном из полистирола при $A = -0.05$ (слева) и $A= -0.001$ (справа). Упругие модули полистирола приведены в таблице~\ref{tab:ps}.}
 	\label{fig:soliton}
 \end{figure}
 \begin{table}[h]
@@ -1068,9 +1070,9 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 На рисунке~\ref{fig:rod_deformed} показано, как выглядит деформированный стержень, когда по нему бежит солитон сжатия. Увеличенные перемещения позволяют увидеть эффект Пуассона (утолщение тела при продольном сжатии), а также нелинейную зависимость продольного перемещения от $r$ (вертикальные линии немного изгибаются в месте сжатия). На всякий случай напомним, что на рисунке~\ref{fig:soliton} изображён график продольной деформации на оси стержня, а не форма границы стержня на рисунке~\ref{fig:rod_deformed}. 
 \begin{figure}[hh]
 	\centering
-	\includegraphics[width=0.6\linewidth]{DeformedRod1}
-	\includegraphics[width=0.6\linewidth]{DeformedRod2}
-	\caption{Стержень из полистирола в разрезе при прохождении солитона деформации~\eqref{soliton},~\eqref{Bi} с амплитудным параметром $A=-0.03$. Продольные перемещения увеличены в 30 раз, поперечные в 60 раз.}
+	\includegraphics[width=0.6\linewidth]{4a_DeformedRod1}
+	\includegraphics[width=0.6\linewidth]{4b_DeformedRod2}
+	\caption{Стержень из полистирола при прохождении солитона деформации~(\ref{soliton},~${i=1}$) с амплитудным параметром $A=-0.03$. Продольные перемещения увеличены в 30 раз, поперечные в 60 раз.}
 	\label{fig:rod_deformed}
 \end{figure}
 
@@ -1091,18 +1093,17 @@ u_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\
 %\begin{equation}%\label{}
 %u(x, t) = \frac{3 \left(v^2 - c^2\right)}{2\beta} \cosh^{-2}\left(\frac{1}{\nu v H}\sqrt{\frac{3(v^2- c^2)}{8}}(x\pm v t)\right),
 %\end{equation}
-Солитонное решение существует, только если параметр длины $\tilde{B}$ вещественен, и, следовательно, $\tilde{B}^2 > 0$, что приводит, предполагая $\nu < 0.5$, к следующим ограничениям на скорость солитона:
+Солитонное решение существует, только если параметр длины $\tilde{B}$ вещественен, что приводит, предполагая $\nu < 0.5$, к следующим ограничениям на скорость солитона:
 \begin{itemize}
 	%\item $\tilde{B}_1^2 > 0 \implies$ $\displaystyle v^2 < \frac{(\nu^2 + \nu + 1) - \nu\sqrt{\nu^2 + 2\nu + 2}}{\nu + 1} c^2$ or $\displaystyle c^2 < v^2 < \frac{(\nu^2 + \nu + 1) + \nu\sqrt{\nu^2 + 2\nu + 2}}{\nu + 1} c^2$,
 	\item $\tilde{B}_i^2 > 0 \implies$ $\displaystyle v^2 < \frac{-\alpha_2^{(i)} - \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} c^2$ или $\displaystyle c^2 < v^2 < \frac{-\alpha_2^{(i)} + \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} c^2$, $i=1,2$,
 	\item $\tilde{B}_3^2 > 0 \implies$ $\displaystyle c^2 < v^2 < \frac{c^2}{1-\nu}$, 
-	\item $\tilde{B}_4^2 > 0 \implies$ $c^2 < v^2$.
+	\item $\tilde{B}_4^2 > 0 \implies$ $c^2 < v^2$,
 \end{itemize}
-Отметим, что $\displaystyle 0 < \frac{-\alpha_2^{(i)} - \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} \leqslant 1$ и $\displaystyle \frac{-\alpha_2^{(i)} + \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} \geqslant 1$ $\forall \nu\in[0, 0.5]$ для $i=1,2$. 
+причём $\displaystyle 0 < \frac{-\alpha_2^{(i)} - \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} \leqslant 1$ и $\displaystyle \frac{-\alpha_2^{(i)} + \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} \geqslant 1$ при $\nu\in[0, 0.5]$, $i=1,2$. 
+Таким образом, в то время как первые три модели дают ограниченный диапазон скоростей, регуляризованная модель не накладывает ограничения сверху на скорость солитона. Также первые две модели, в отличие от двух других, допускают существование солитонов противоположного знака. 
 
-Таким образом, в то время как первые три модели дают ограниченный диапазон скоростей солитона сжатия, регуляризованная модель не накладывает ограничения сверху на скорость. Также первые две модели, в отличие от двух других, допускают существование солитонов растяжения. 
-
-Отметим, что помимо математического ограничения на параметры солитона (вещественность параметра ширины $B$) есть физическое ограничение: солитон не должен вызывать пластических деформаций, поскольку модель строилась только для упругих деформаций. Так, для полистирола и широкого круга других материалов именно физическое ограничение сильнее всего сужает диапазон допустимых скоростей, поскольку, как видно из формулы \eqref{soliton_v}, чем больше разность ${v^2-c^2}$, тем больше амплитуда и меньше длина солитона.
+Помимо математического ограничения на параметры солитона (вещественность параметра длины $B$) есть физическое ограничение: солитон не должен вызывать пластических деформаций, поскольку модель строилась только для упругих деформаций. Так, для полистирола и широкого круга других материалов именно физическое ограничение сильнее всего сужает диапазон допустимых скоростей, поскольку, как видно из формулы \eqref{soliton_v}, чем больше разность ${v^2-c^2}$, тем больше амплитуда и меньше длина солитона.
 %Длинные волны в стержнях из таких материалов целесообразнее всего моделировать с помощью регуляризованной модели, являющейся наиболее простой среди рассмотренных моделей и в рамках которой не учитываются колебания других мод, а также отсутствует коротковолновая неустойчивость.
 
 %Отметим, что все модели выведены в предположении малой амплитуды деформаций, которая пропорциональна относительной разнице $v^2$ и $c^2$. Однако все ограничения сверху на скорость солитона в стержне, например, из материала с $\nu\approx\frac13$ относительно далеки от $c^2$. Однако теоретически могут быть материалы с такими упругими характеристиками 
@@ -1293,7 +1294,7 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 		\includegraphics[width=\textwidth]{figures/Grid2D}
 		%\caption{Lorem ipsum}
 	\end{subfigure}
-	\caption{Пример трёхмерной и двумерной сеток из двух доменов.}
+	\caption{Пример трёхмерной (слева) и двумерной (справа) сеток из двух доменов, обозначенных разными цветами.}
 	\label{fig:grid}
 \end{figure}
 
@@ -1312,20 +1313,20 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 
 \section{Численное моделирование}
 
-\subsection{Образование солитона из начального условия}
-Будем решать задачу Коши для полных уравнений, где начальное условие задано распространяющимся вправо со скоростью $c$ гладким импульсом:
+\subsection{Образование солитона из длинной волны}
+Будем решать задачу Коши для полных уравнений со свободными от напряжений границами ($\vect{P}_b=0$), где начальное условие задано распространяющимся вправо со скоростью $c$ гладким импульсом:
 \begin{align}
 \label{3_ic_u}
 & U_0 (x, r) = A_0 W \erf\lb \frac{x - L/2}{W}\rb,&  &\dot{U}_0 (x, r) = -c \pdiff{U_0}{x}&\\
 \label{3_ic_v}
 & V_0(x, r) = -\nu r \pdiff{U_0}{x},& &\dot{V}_0 (x, r) = -c \pdiff{V_0}{x}&
 \end{align}
-На рисунке~\ref{fig:evol_compar1} слева изображена эволюция этого импульса и зарождение солитона при $A_0=0.01$, $W=20$ в стержне из полистирола, характеристики которого представлены в таблице~\ref{tab:ps}. Исходный импульс испускает некоторые осцилляции и отрывается от них, что согласуется с моделью Буссинеска, согласно которой солитон имеет большую скорость, чем линейные волны. На рисунке справа представлено сравнение оторвавшегося импульса (<<экспериментального>> солитона) с <<теоретическим>> солитонном \eqref{soliton_v}. Если скорость теоретического солитона, являющуюся свободным параметром в \eqref{soliton_v}, подобрать так, чтобы она совпадала со скоростью экспериментального солитона, то последний имеет почти ту же длину, что и теоретический, но на 6\% большую амплитуду.
+На рисунке~\ref{fig:evol_compar1} слева изображена эволюция этого импульса и зарождение солитона при $A_0=0.01$, $W=20$ в стержне из полистирола, характеристики которого представлены в таблице~\ref{tab:ps}. Исходный импульс испускает небольшие осцилляции и отрывается от них, что согласуется с моделью Буссинеска, согласно которой солитон распространяется со скоростью недоступной линейным волнам. На рисунке~\ref{fig:evol_compar1} справа представлено сравнение оторвавшегося в численном моделировании импульса (<<численного>> солитона) с <<теоретическим>> солитонном \eqref{soliton_v} из модели Буссинеска. Если скорость теоретического солитона, являющуюся свободным параметром в \eqref{soliton_v}, подобрать так, чтобы она совпадала со скоростью численного солитона, то последний имеет почти ту же длину, что и теоретический, но на 6\% большую амплитуду. Отметим, что формула \eqref{soliton_v} задаёт четыре солитона различной длины, однако при амплитуде около $0.01$ они практически идентичны.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.49\linewidth]{figures/SolEvol}
 	\includegraphics[width=0.49\linewidth]{figures/SolCompare}
-	\caption{Слева: решение задачи Коши с начальными условиями \eqref{3_ic_u}, \eqref{3_ic_v} для полных уравнений. На графике изображены профили продольной деформации в центре стержня ($r=0$) в различные моменты времени:~$-U_x(x - ct, 0, t)$. Масштаб деформации показан чёрным прямоугольником. Справа: сравнение профиля <<экспериментального>> солитона, полученного в численном эксперименте, и <<теоретического>> солитона \eqref{soliton_v}. Скорость теоретического солитона $v$ подобрана так, чтобы она совпадала со скоростью экспериментального.}
+	\caption{Слева: решение задачи Коши с начальными условиями \eqref{3_ic_u}, \eqref{3_ic_v} при $A_0=0.01$, $W=20$ для полных уравнений. На графике изображены профили продольной деформации в центре стержня ($r=0$) в различные моменты времени:~$-U_x(x - ct, 0, t)$. Масштаб деформации показан чёрным прямоугольником.\\ Справа: сравнение профиля солитона, полученного в численном моделировании, и <<теоретического>> солитона \eqref{soliton_v}. Скорость теоретического солитона $v$ подобрана так, чтобы она совпадала со скоростью численного.}
 	\label{fig:evol_compar1}
 \end{figure}
 
@@ -1354,21 +1355,57 @@ j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
 %\end{figure}
 
 
-\subsection{Образование солитона из бегущего по поверхности напряжения}
-Выведенная модель типа Буссинеска отличается от полученных ранее учётом напряжения на поверхности. 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=0.49\linewidth]{figures/SolGenForceCompare}
-	\includegraphics[width=0.49\linewidth]{figures/SolGenForce}
-	\caption{}
-	\label{fig:gen_compar1}
-\end{figure}
+%\subsection{Образование солитона из бегущего по поверхности напряжения}
+%Выведенная модель типа Буссинеска отличается от полученных ранее учётом напряжения на поверхности. 
+%\begin{figure}[h]
+%	\centering
+%	\includegraphics[width=0.49\linewidth]{figures/SolGenForceCompare}
+%	\includegraphics[width=0.49\linewidth]{figures/SolGenForce}
+%	\caption{}
+%	\label{fig:gen_compar1}
+%\end{figure}
 
 
 \subsection{Образование солитона из удара по торцу стержня}
-В предыдущем параграфе моделирование волн проводилось в стержне со свободной от напряжений поверхностью, однако представляет интерес изучение волн, вызываемых внешним воздействием, например, ударом по торцу стержня. Эти результаты могут быть полезны для того, чтобы возбудить уединённые волны в эксперименте. 
+В предыдущем пункте моделирование волн проводилось в стержне со свободной от напряжений поверхностью, однако представляет интерес изучение волн, вызываемых внешним воздействием, например, ударом по торцу стержня. Эти результаты могут быть полезны для того, чтобы возбудить уединённые волны в эксперименте. 
 
-Модель типа Буссинеска строилась для бесконечного стержня, следовательно, она применима для описания волн вдали от торцов стержня. Моделирование волн вблизи торцов возможно с помощью полных уравнений движения. На рис. ... представлены результаты 
+Модель типа Буссинеска строилась для бесконечного стержня, следовательно, она применима для описания волн вдали от торцов стержня. Моделирование волн вблизи торцов возможно с помощью полных уравнений \eqref{3_eqns_full} -- \eqref{3_strain} с нулевыми начальными условиями (отсутствие возмущения) следующими условиями на левой и правой границах стержня:
+\begin{align}
+\label{3_impact_stress}
+&P_{xx} = 0.2 \cosh\lb\frac t 2\rb^{-2}, \qquad P_{rx} = 0&  &\mbox{при}\quad x = 0,\\
+\label{3_impact_stress2}
+&P_{xx} = P_{rx} = 0&  &\mbox{при}\quad x = L
+\end{align}
+Решение полных уравнений представлено рисунке \ref{fig:impact} слева. Быстрое воздействие \eqref{3_impact_stress}, зависимость которого от времени представлена на вертикальном графике, формирует короткий импульс, который впоследствии теряет амплитуду, удлинняется и отрывается от множества порождённых им осцилляций.
+%Очень похожую картину можно получить, если решать исходную задачу Коши \eqref{3_eqns_full} -- \eqref{3_strain}, задав начальное условие в виде короткого импульса, похожего на тот, что образовался в первый момент времени на рисунке \ref{fig:impact}.
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.545\linewidth]{figures/Impact}
+	\includegraphics[width=0.445\linewidth]{figures/ImpactBq}
+	\caption{Моделирование удара по торцу. Слева: решение задачи Коши \eqref{3_impact_stress}, \eqref{3_impact_stress2} для полных уравнений. Справа: решение задачи Коши \eqref{3_bq_ic_2} для резуляризованного уравнения Буссинеска.}
+	\label{fig:impact}
+\end{figure}
+
+Сравним полученный результат с приближённой моделью Буссинеска. Мы не можем задать напряжение на торце стержня в этой модели, однако мы можем поставить начальное условие в виде узкого импульса, похожего по амплитуде и длине на тот, что образовался в первый момент времени на рисунке \ref{fig:impact}. Для этого мы использовали начальное условие в виде:
+\begin{align}
+\label{3_bq_ic_2}
+& u_0 (x) = -0.072 \exp\lb \frac{x^2}{5^2}\rb,&  &\dot{u}_0 (x) = -c \pdiff{u_0}{x}.&
+\end{align}
+Результаты моделирования представлены на рисунке \ref{fig:impact} справа.
+%\begin{figure}[h]
+%	\centering
+%	\includegraphics[width=0.49\linewidth]{figures/ImpactBq}
+%	%\includegraphics[width=0.49\linewidth]{figures/ImpactKdV}
+%	\caption{Слева: решение задачи Коши для регуляризованного уравнения Буссинеска с начальным условием \eqref{3_bq_ic_2}. Справа: решение аналогичной задачи для уравнения КдФ.}
+%	\label{fig:impact_bq_kdv}
+%\end{figure}
+
+
+\subsection{Прохождение солитона через сдавленную область}
+
+
+%\subsection{О применении полученных результатов для возбуждения солитонов}
+
 
 %\chapter{Обработка экспериментальных данных}
 
